--- a/050317/styles/styles.css
+++ b/050317/styles/styles.css
@@ -49,7 +49,7 @@ p {
 }
 
 .sidebar {
-  width: 160px;
+  width: 200px;
   height: 1000px;
   background-color: #E6E6E6;
   padding: 10px;
@@ -61,6 +61,7 @@ p {
   width: 30%;
   float: left;
   margin: 10px;
+  margin-top: 50px;
 }
 
 .column p {
